[metadata]
name = ulrs
version = 0.0.1
author = Lyhokia
author_email = lyhokia@gmail.com
description = The Ultimate Lisp REPL & Shell
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glyh/ulrs
project_urls =
    Bug Tracker = https://github.com/glyh/ulrs/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    bin/ulrs

[options.package_data]
* = *.hy

[options.packages.find]
where = src
